--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cover3d</groupId>
   <artifactId>angular-filemanager-java</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -22,12 +22,19 @@
 		<!-- jackson JSON -->
 		<org.jackson-version>2.6.5</org.jackson-version>
 		<junit.version>4.12</junit.version>
+		<zip4j.version>1.3.2</zip4j.version>
 	</properties>
   <dependencies>
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>${junit.version}</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
+	<dependency>
+	    <groupId>net.lingala.zip4j</groupId>
+	    <artifactId>zip4j</artifactId>
+	    <version>${zip4j.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
