--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ group 'com.covergroup.liveupdate'
 version '0.5.1.SNAPSHOT'
 
 dependencies {
+    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.3'
+
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: "${jacksonVersion}"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jacksonVersion}"
